# repro140

./: .travis.yml  BUILD.bazel  WORKSPACE
testing/: BUILD.bazel  Main.hs
tools/: bazel.rc
